--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <div class="parent">
-       <div class="container">
-          <h1 class="heading">Lift ~ Simulation</h1>
-          
+     
+      <div class="container">
+        <h2 class="heading">Lift ~ Simulation</h2>
+
+        <div class="child-container">
           <div class="user-input">
             <div class="floor">
-                <label for="floor">No of Floors</label>
-                <input id="floor" type="number">
-             </div>
-             <div class="lift">
-                <label for="lift">No of Lifts</label>
-                <input id="lift" type="number">
-             </div>
-
+              <label for="floor">No of Floors</label>
+              <input id="floor" type="number" />
+            </div>
+            <div class="lift">
+              <label for="lift">No of Lifts</label>
+              <input id="lift" type="number" />
+            </div>
           </div>
           <div class="button">
             <button onclick="submitUserData()">Submit</button>
-         </div>
-       </div>
+          </div>
+          <p class="note">
+            <strong>Note:</strong> Minimum number of floors should be 2 and
+            minimum number of lifts should be 1
+          </p>
+        </div>
+      </div>
 
-       <div id="newBuilding">
-       </div>
-
-    </div>
+      <div id="newBuilding"></div>
+      </div>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
