lift on one floor fixed

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
             <button onclick="submitUserData()">Submit</button>
           </div>
           <p class="note">
-            <strong>Note:</strong> Minimum number of floors should be 2 and
-            minimum number of lifts should be 1
+            <strong>Note:</strong> Please Enter values as per your Requirements
           </p>
         </div>
       </div>
