--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
           <div class="user-input">
             <div class="floor">
               <label for="floor">No of Floors</label>
-              <input id="floor" type="number" />
+              <input id="floor" min="1" type="number" />
             </div>
             <div class="lift">
               <label for="lift">No of Lifts</label>
-              <input id="lift" type="number"/>
+              <input id="lift" min="1" type="number"/>
             </div>
           </div>
           <div class="button">
